tests/idris2/error/perror007/StrError3.idr
foo : String
foo = "incomplete: \{ a <+> }"
